--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Rock-it</title>
 </head>
 
-<body>
+<body style="background-color:rgb(10, 9, 9);">
     <h1 ID="hd">KEYBOARD</h1>
     <div class="box1">
         <button class="btn Q">Q</button>
